; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/extr_ex_data.c_get_and_lock.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/extr_ex_data.c_get_and_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPTO_EX_INDEX__COUNT = common dso_local global i32 0, align 4
@CRYPTO_F_GET_AND_LOCK = common dso_local global i32 0, align 4
@ERR_R_PASSED_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@ex_data_init = common dso_local global i32 0, align 4
@do_ex_data_init = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@ex_data_lock = common dso_local global i32* null, align 8
@ex_data = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_and_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_and_lock(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @CRYPTO_EX_INDEX__COUNT, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @CRYPTO_F_GET_AND_LOCK, align 4
  %13 = load i32, i32* @ERR_R_PASSED_INVALID_ARGUMENT, align 4
  %14 = call i32 @CRYPTOerr(i32 %12, i32 %13)
  store i32* null, i32** %2, align 8
  br label %35

15:                                               ; preds = %7
  %16 = load i32, i32* @do_ex_data_init, align 4
  %17 = call i32 @RUN_ONCE(i32* @ex_data_init, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* @CRYPTO_F_GET_AND_LOCK, align 4
  %21 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %22 = call i32 @CRYPTOerr(i32 %20, i32 %21)
  store i32* null, i32** %2, align 8
  br label %35

23:                                               ; preds = %15
  %24 = load i32*, i32** @ex_data_lock, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32* null, i32** %2, align 8
  br label %35

27:                                               ; preds = %23
  %28 = load i32*, i32** @ex_data, align 8
  %29 = load i32, i32* %3, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  store i32* %31, i32** %4, align 8
  %32 = load i32*, i32** @ex_data_lock, align 8
  %33 = call i32 @CRYPTO_THREAD_write_lock(i32* %32)
  %34 = load i32*, i32** %4, align 8
  store i32* %34, i32** %2, align 8
  br label %35

35:                                               ; preds = %27, %26, %19, %11
  %36 = load i32*, i32** %2, align 8
  ret i32* %36
}

declare dso_local i32 @CRYPTOerr(i32, i32) #1

declare dso_local i32 @RUN_ONCE(i32*, i32) #1

declare dso_local i32 @CRYPTO_THREAD_write_lock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
